--- a/LaYumba.Functional.Tests/LaYumba.Functional.Tests.csproj
+++ b/LaYumba.Functional.Tests/LaYumba.Functional.Tests.csproj
@@ -11,6 +11,7 @@
 
     <PackageReference Include="FsCheck" Version="3.0.0-alpha-b752" />
     <PackageReference Include="FsCheck.Xunit" Version="3.0.0-alpha-b752" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
 
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.console" Version="2.2.0" />
