--- a/LaYumba.Functional/LaYumba.Functional.csproj
+++ b/LaYumba.Functional/LaYumba.Functional.csproj
@@ -12,6 +12,7 @@
     <PackageTags>functional programming</PackageTags>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.1" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.7.0" />
